@@ -444,7 +444,7 @@
       <applyto>/apps/procman/proctree/col_4_visible</applyto>
       <owner>procman</owner>
       <type>bool</type>
-      <default>TRUE</default>
+      <default>FALSE</default>
       <locale name="C">
         <short>Show process resident memory column on startup</short>
         <long></long>
@@ -697,6 +697,31 @@
       <default>FALSE</default>
       <locale name="C">
         <short>Show process arguments column on startup</short>
+        <long></long>
+      </locale>
+      </schema>
+
+
+      <schema>
+      <key>/schemas/apps/procman/proctree/col_15_width</key>
+      <applyto>/apps/procman/proctree/col_15_width</applyto>
+      <owner>procman</owner>
+      <type>int</type>
+      <default>48</default>
+      <locale name="C">
+        <short>Process estimated memory usage column saved width</short>
+        <long></long>
+      </locale>
+      </schema>
+      
+      <schema>
+      <key>/schemas/apps/procman/proctree/col_15_visible</key>
+      <applyto>/apps/procman/proctree/col_15_visible</applyto>
+      <owner>procman</owner>
+      <type>bool</type>
+      <default>TRUE</default>
+      <locale name="C">
+        <short>Show estimated memory usage column on startup</short>
         <long></long>
       </locale>
       </schema>
