@@ -95,6 +95,9 @@ sort_ints (GtkTreeModel *model, GtkTreeIter *itera, GtkTreeIter *iterb, gpointer
 	case COL_CPU:
 		return PROCMAN_RCMP(infoa->pcpu, infob->pcpu);
 
+	case COL_MEM:
+		return PROCMAN_RCMP(infoa->mem, infob->mem);
+
 	default:
 		g_assert_not_reached();
 		return 0;
@@ -283,7 +286,7 @@ proctable_new (ProcData * const procdata)
 	GtkTreeViewColumn *column;
 	GtkCellRenderer *cell_renderer;
 
-	static const gchar *titles[] = {
+	const gchar *titles[] = {
 		N_("Process Name"),
 		N_("User"),
 		N_("Status"),
@@ -299,13 +302,14 @@ proctable_new (ProcData * const procdata)
 		N_("ID"),
 		N_("Security Context"),
 		N_("Arguments"),
+		N_("Memory"),
 		NULL,
 		"POINTER"
 	};
 
-	gint i;
+	g_assert(COL_MEM == 15);
 
-	PROCMAN_GETTEXT_ARRAY_INIT(titles);
+	gint i;
 
 	scrolled = gtk_scrolled_window_new (NULL, NULL);
 	gtk_scrolled_window_set_policy (GTK_SCROLLED_WINDOW (scrolled),
@@ -328,6 +332,7 @@ proctable_new (ProcData * const procdata)
 				    G_TYPE_UINT,	/* ID		*/
 				    G_TYPE_STRING,	/* Security Context */
 				    G_TYPE_STRING,	/* Arguments	*/
+				    G_TYPE_STRING,	/* Memory       */
 				    GDK_TYPE_PIXBUF,	/* Icon		*/
 				    G_TYPE_POINTER	/* ProcInfo	*/
 		);
@@ -356,7 +361,7 @@ proctable_new (ProcData * const procdata)
 	gtk_tree_view_column_set_attributes (column, cell_renderer,
 					     "text", COL_NAME,
 					     NULL);
-	gtk_tree_view_column_set_title (column, titles[0]);
+	gtk_tree_view_column_set_title (column, _(titles[0]));
 	gtk_tree_view_column_set_sort_column_id (column, COL_NAME);
 	gtk_tree_view_column_set_resizable (column, TRUE);
 	gtk_tree_view_column_set_sizing(column, GTK_TREE_VIEW_COLUMN_FIXED);
@@ -365,7 +370,7 @@ proctable_new (ProcData * const procdata)
 	gtk_tree_view_set_expander_column (GTK_TREE_VIEW (proctree), column);
 
 
-	for (i = COL_USER; i <= COL_ARGS; i++) {
+	for (i = COL_USER; i <= COL_MEM; i++) {
 		cell_renderer = gtk_cell_renderer_text_new ();
 
 		switch(i)
@@ -379,6 +384,7 @@ proctable_new (ProcData * const procdata)
 		case COL_NICE:
 		case COL_PID:
 		case COL_CPU_TIME:
+		case COL_MEM:
 			g_object_set(G_OBJECT(cell_renderer),
 				     "xalign", 1.0f,
 				     NULL);
@@ -389,7 +395,7 @@ proctable_new (ProcData * const procdata)
 		gtk_tree_view_column_set_attributes (column, cell_renderer,
 						     "text", i,
 						     NULL);
-		gtk_tree_view_column_set_title (column, titles[i]);
+		gtk_tree_view_column_set_title (column, _(titles[i]));
 		gtk_tree_view_column_set_sort_column_id (column, i);
 		gtk_tree_view_column_set_resizable (column, TRUE);
 		gtk_tree_view_column_set_sizing(column, GTK_TREE_VIEW_COLUMN_FIXED);
@@ -400,7 +406,7 @@ proctable_new (ProcData * const procdata)
 	gtk_container_add (GTK_CONTAINER (scrolled), proctree);
 
 
-	for(i = COL_NAME; i <= COL_ARGS; i++)
+	for(i = COL_NAME; i <= COL_MEM; i++)
 	{
 		switch(i)
 		{
@@ -412,6 +418,7 @@ proctable_new (ProcData * const procdata)
 		case COL_CPU_TIME:
 		case COL_START_TIME:
 		case COL_CPU:
+		case COL_MEM:
 			gtk_tree_sortable_set_sort_func (
 				GTK_TREE_SORTABLE (model),
 				i,
@@ -591,6 +598,8 @@ get_process_memory_info(ProcInfo *info)
 	info->memxserver = xresources.total_bytes_estimate;
 
 	get_process_memory_writable(info);
+
+	info->mem = info->memxserver + info->memwritable;
 }
 
 
@@ -642,13 +651,14 @@ static void
 update_info_mutable_cols(GtkTreeStore *store, ProcData *procdata, ProcInfo *info)
 {
 	gchar *vmsize, *memres, *memwritable, *memshared, *memxserver,
-		*cpu_time, *start_time;
+		*cpu_time, *start_time, *mem;
 
 	vmsize	   = SI_gnome_vfs_format_file_size_for_display (info->vmsize);
 	memres	   = SI_gnome_vfs_format_file_size_for_display (info->memres);
 	memwritable = SI_gnome_vfs_format_file_size_for_display (info->memwritable);
 	memshared  = SI_gnome_vfs_format_file_size_for_display (info->memshared);
 	memxserver = SI_gnome_vfs_format_file_size_for_display (info->memxserver);
+	mem = SI_gnome_vfs_format_file_size_for_display(info->mem);
 
 	cpu_time = format_duration_for_display (info->cpu_time_last / procdata->frequency);
 
@@ -668,6 +678,7 @@ update_info_mutable_cols(GtkTreeStore *store, ProcData *procdata, ProcInfo *info
 			    COL_CPU_TIME, cpu_time,
 			    COL_START_TIME, start_time,
 			    COL_NICE, info->nice,
+			    COL_MEM, mem,
 			    -1);
 
 	/* FIXME: We don't bother updating COL_SECURITYCONTEXT as it can never change.
@@ -679,6 +690,7 @@ update_info_mutable_cols(GtkTreeStore *store, ProcData *procdata, ProcInfo *info
 	g_free (memxserver);
 	g_free (cpu_time);
 	g_free(start_time);
+	g_free(mem);
 }
 
 
