@@ -41,6 +41,7 @@ enum
 	COL_PID,
 	COL_SECURITYCONTEXT,
 	COL_ARGS,
+	COL_MEM,
 	COL_PIXBUF,
 	COL_POINTER,
 	NUM_COLUMNS
