@@ -1,3 +1,14 @@
+2006-06-22  Benoît Dejean  <benoit@placenet.org>
+
+	* src/gnome-system-monitor.schemas.in:
+	* src/procman.h:
+	* src/proctable.c: (sort_ints), (proctable_new),
+	(get_process_memory_info), (update_info_mutable_cols):
+	* src/proctable.h:
+	
+	Added new memory column. Displays estimated memory usage.
+	See #341241.
+
 2006-06-21  Benoît Dejean  <benoit@placenet.org>
 
 	* src/proctable.c: (proctable_new):
